[metadata]
name = djhtml
version = 1.0.1
description = Django template indenter
long_description = file: README.md
long_description_content_type = text/markdown
author = Jaap Joris Vens
author_email = jj@rtts.eu
url = https://github.com/rtts/djhtml
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    djhtml = djhtml.__main__:main

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
