[metadata]
name = djhtml
version = 1.4.14
description = Django/Jinja template indenter
long_description = file: README.md
long_description_content_type = text/markdown
author = Jaap Joris Vens
author_email = jj@rtts.eu
url = https://github.com/rtts/djhtml
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
python_requires = '>=3.6'

[options]
packages = find:

[options.extras_require]
dev =
    nox
    isort
    black
    flake8
    pre-commit

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    djtxt = djhtml.__main__:main
    djhtml = djhtml.__main__:main
    djcss = djhtml.__main__:main
    djjs = djhtml.__main__:main

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
extend-exclude = .nox
